tests/baselines/reference/jsxChildrenArrayWrongType.errors.txt
index.tsx(11,6): error TS2769: No overload matches this call.
  Overload 2 of 2, '(props: PropsType, context: any): Foo', gave the following error.
    Type 'unknown' is not assignable to type 'string | boolean'.
  Overload 2 of 2, '(props: PropsType, context: any): Foo', gave the following error.
    Type 'string' is not assignable to type 'number | boolean'.


==== index.tsx (1 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    // target is ES5, so no `Iterable` type is present.
    
    interface PropsType {
        children: [string, number] | boolean[];
    }
    declare class Foo extends React.Component<PropsType, {}> {}
    const b = (
        <Foo>
         ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 2 of 2, '(props: PropsType, context: any): Foo', gave the following error.
!!! error TS2769:     Type 'unknown' is not assignable to type 'string | boolean'.
!!! error TS2769:   Overload 2 of 2, '(props: PropsType, context: any): Foo', gave the following error.
!!! error TS2769:     Type 'string' is not assignable to type 'number | boolean'.
            {<div/> as unknown}
            {"aa"}
        </Foo>
    );